Failing test for `--add-exports` and `--release`